--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <form action="http://example.com" method="post">
   <div>
     <label for="say">What greeting do you want to say?</label>
-    <input name="say" id="say" value="Hi">
+    <input name="say" id="say" value="¿Qué onda">
   </div>
   <div>
     <label for="to">Who do you want to say it to?</label>
-    <input name="to" id="to" value="Mom">
+    <input name="to" id="to" value="muchá?">
   </div>
   <div>
     <button>Send my greetings</button>
