--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <form action="php-example.php" method="post">
   <div>
     <label for="say">What greeting do you want to say?</label>
-    <input name="say" id="say" value="¿Qué onda">
+    <input name="say" id="say" value="Hola">
   </div>
   <div>
     <label for="to">Who do you want to say it to?</label>
-    <input name="to" id="to" value="muchá?">
+    <input name="to" id="to" value="caracola">
   </div>
   <div>
     <button>Send my greetings</button>
