--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style>
   </head>
   <body>
-    <form method="post" action="php-example.php">
+    <form method="get" action="php-example.php">
       <div>
         <label for="say">What greeting do you want to say?</label>
         <input name="say" id="say" value="Hi">
