--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <form method="post" action="php-example.php">
       <div>
         <label for="say">What greeting do you want to say?</label>
-        <input name="say" id="say" value="Hi">
+        <input name="say" id="say" value="HOLA">
       </div>
       <div>
         <label for="to">Who do you want to say it to?</label>
-        <input name="to" value="Mom">
+        <input name="to" value="MUNDO">
       </div>
       <div>
         <button>Send my greetings</button>
